# cookiecutter-poetry-pypackage

./: .gitignore  AUTHORS.md  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
cookiecutter_poetry_pypackage/: __init__.py
hooks/: post_gen_project.py
scripts/: get-project-name.sh
tests/: __init__.py  test_cookiecutter_poetry_pypackage.py
{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/scripts/: install-poetry.sh
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
