[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter-poetry-pypackage"
repository = "https://github.com/albertorios/cookiecutter-poetry-pypackage"
version = "1.0.0"
description = ""
authors = ["albertorios <7119264+albertorios@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cookiecutter", "poetry", "pypackage"]

[tool.poetry.dependencies]
python = "^3.10.10"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
cookiecutter = "^2.1.1"
flake8 = "^6.0.0"
pip = "^23.0.1"
pytest = "^7.2.2"
tox = "^4.4.7"
wheel = "^0.40.0"

