[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
keywords = ["{{ cookiecutter.project_slug }}"]

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple"
secondary = false

[tool.poetry.dependencies]
python = "^3.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cookiecutter = "^1.7.2"
tox = "^3.23.0"
bump2version = "^1.0.1"
flake8 = "^3.9.1"
pip = "^21.1"
wheel = "^0.36.2"
coverage = {extras = ["toml"], version = "^5.5"}
{% if cookiecutter.command_line_interface|lower == 'click' -%}
click = "^7.1.2"
{% endif %}
{%- if 'no' not in cookiecutter.command_line_interface|lower %}

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"

{%- endif %}
