[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
keywords = ["{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = "^3.10.10"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
cookiecutter = "^2.1.1"
flake8 = "^6.0.0"
pip = "^23.0.1"
pytest = "^7.2.2"
tox = "^4.4.7"
wheel = "^0.40.0"
coverage = {extras = ["toml"], version = "^7.2.2"}
{% if cookiecutter.command_line_interface|lower == 'click' -%}
click = "^8.1.3"
{% endif %}
{%- if 'no' not in cookiecutter.command_line_interface|lower %}

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"

{%- endif %}
